# react-fastapi-template

./: .gitignore  README.md  docker-compose.yml  log.md  作成ログ.md
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0df573d8286f_first.py  5acfeb22c744_first.py  86a593a506e9_name_nullable_false.py
backend/app/: create_initial_data.py  create_test_user.py  main.py  migrate.py
backend/app/api/: api.py  deps.py
backend/app/api/endpoints/: auth.py  root.py  task.py  tasks.py  todo.py  user.py  users.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  base.py  crud_task.py  crud_user.py  task.py  todo.py  user.py
backend/app/db/: base.py  base_class.py
backend/app/models/: __init__.py  task.py  todo.py  user.py  users.py
backend/app/schemas/: __init__.py  task.py  todo.py  token.py  user.py
backend/docs/: directory_structure.md
docs/: create_log_docker.md  create_log_local.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/my-app/: package-lock.json  package.json
frontend/my-app/public/: index.html
frontend/my-app/src/: App.css  App.tsx
frontend/my-app/src/routes/: AdminRoutes.tsx  AppRoutes.tsx  PublicRoutes.tsx  UserRoutes.tsx
frontend/src/: App.tsx  index.css
frontend/src/common/api/: clients.ts  react-query.ts  (+1 more)
frontend/src/openapi/: README.md  api.ts
frontend/src/routes/: ProtectedRoute.tsx  index.tsx
frontend/src/stores/: dialog.ts
scripts/: generate_client.bat  generate_client.sh
(+80 files in other folders)
